Use Css In Html

--- a/Pseudo.html
+++ b/Pseudo.html
@@ -46,7 +46,7 @@ a:active{
     <div class="container" id="cont1">
         <h3>This is my heading</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam doloremque tempora, saepe reiciendis sint voluptas odio quo velit esse repellendus at dolor officia non fugit placeat necessitatibus molestiae soluta veritatis? Soluta id ipsum esse quae?</p>
-        <a href="" class="btn">Read more</a>
+        <a href="https://en.wiktionary.org/wiki/contant " target="_main" class="btn">Read more</a>
         <button class="btn">Contact us</button>
     </div>
     
